fix: text alignment; translation

--- a/src/components/MarkerDescription/MarkerDescription.scss
+++ b/src/components/MarkerDescription/MarkerDescription.scss
@@ -38,6 +38,7 @@
     flex-grow: 1;
     align-items: center;
     width: 100%;
+    text-align: center;
   }
 }
 
